--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,10 +9,12 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #e9e9e9;
     --foreground: #ededed;
   }
 }
+
+
 
 body {
   color: var(--foreground);
